--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8" />
     <title>Resetatron</title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
-
 <body>
      <section class="intro">
         <aside>
