--- a/example.html
+++ b/example.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8" />
+    <title>Resetatron</title>
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+</head>
+<body>
 <section class="main">
        <h1>Example</h1>
         <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
@@ -42,4 +51,9 @@
 
             <li>Pellentesque fermentum dolor. Aliquam quam lectus, facilisis auctor, ultrices ut, elementum vulputate, nunc.</li>
         </ul>
+            <button><a href="https://github.com/charlespeters/Resetatron/zipball/master">Download</a></button>
+            <button><a href="https://github.com/charlespeters/Resetatron/">Fork Me On Github</a></button>
+            <button><a href="index.html">About Resetatron</a></button>
     </section>
+</body>
+</html>
