--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8" />
+    <meta name="description" content="Typographic Reset in a SASS Partial">
+    <meta name="keywords" content="Reset, Typography, SASS, Typekit, SCSS">
     <title>Resetatron</title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
@@ -11,20 +13,16 @@
         <aside>
             <img src="img/resetatron.png" alt="" />
         </aside>
-            <article>
-                <h1>Resetatron</h1>
-
+        <article>
+            <h1>Resetatron</h1>
             <h2>A Typographic Reset</h2>
-
             <h3>It's a Super Handy SASS Partial</h3>
-            
-            <p>When you load font’s from Typekit, Google or Font Squirrel, using <code>font-weight: 700</code> or <code>font-style: normal</code> without reseting leads to a faux bold or a faux italics.</p>
-                
-            </article>
+            <p>Typography is so awesome. The web has become a really rich canvas for type now and there are so many ways to add amazing typefaces. Perfecting your typography skills isn't easy, but this this should help polish it.</p>
+            <p>When you load font’s from Typekit, Google using <code>font-weight: 700</code> or <code>font-style: normal</code> without reseting leads to a faux bold or a faux italics. I kept having to write a reset over and over again.</p>
             <button><a href="https://github.com/charlespeters/Resetatron/zipball/master">Download</a></button>
             <button><a href="https://github.com/charlespeters/Resetatron/">Fork Me On Github</a></button>
-
-        </section>
-
-    </body>
+            <button><a href="example.html">In Action</a></button>                
+        </article>
+    </section>
+</body>
 </html>
