--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <h3>It's a Super Handy SASS Partial</h3>
             <p>Typography is so awesome. The web has become a really rich canvas for type now and there are so many ways to add amazing typefaces. Perfecting your typography skills isn't easy, but this this should help polish it.</p>
             <p>When you load font’s from Typekit, Google using <code>font-weight: 700</code> or <code>font-style: normal</code> without reseting leads to a faux bold or a faux italics. I kept having to write a reset over and over again.</p>
-            <button><a href="https://github.com/charlespeters/Resetatron/zipball/master">Download</a></button>
-            <button><a href="https://github.com/charlespeters/Resetatron/">Fork Me On Github</a></button>
-            <button><a href="example.html">In Action</a></button>                
+            <a class="btn" href="https://github.com/charlespeters/Resetatron/zipball/master">Download</a>
+            <a class="btn" href="https://github.com/charlespeters/Resetatron/">Fork Me On Github</a>
+            <a class="btn" href="example.html">In Action</a>
         </article>
     </section>
 </body>
