--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Typographic Reset in a SASS Partial">
     <meta name="keywords" content="Reset, Typography, SASS, Typekit, SCSS">
     <title>Resetatron</title>
-    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="css/atron.css" type="text/css">
 </head>
 <body>
      <section class="intro">
@@ -14,14 +14,19 @@
             <img src="img/resetatron.png" alt="" />
         </aside>
         <article>
-            <h1>Resetatron</h1>
-            <h2>A Typographic Reset</h2>
-            <h3>It's a Super Handy SASS Partial</h3>
+            <header>
+                <h1>Resetatron</h1>
+                <h2>A Typographic Reset</h2>
+                <h3>It's a Super Handy SASS Partial</h3>
+            </header>
             <p>Typography is so awesome. The web has become a really rich canvas for type now and there are so many ways to add amazing typefaces. Perfecting your typography skills isn't easy, but this this should help polish it.</p>
             <p>When you load font’s from Typekit, Google using <code>font-weight: 700</code> or <code>font-style: normal</code> without reseting leads to a faux bold or a faux italics. I kept having to write a reset over and over again.</p>
-            <a class="btn" href="https://github.com/charlespeters/Resetatron/zipball/master">Download</a>
-            <a class="btn" href="https://github.com/charlespeters/Resetatron/">Fork Me On Github</a>
-            <a class="btn" href="example.html">In Action</a>
+            <footer>
+                <a class="btn" href="https://github.com/charlespeters/Resetatron/zipball/master">Download</a>
+                <a class="btn" href="https://github.com/charlespeters/Resetatron/">Fork Me On Github</a>
+                <a class="btn" href="example.html">In Action</a>
+            </footer>
+
         </article>
     </section>
 </body>
